PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ForControlWarningCoCo.par
ForControlWarningCoCo {
seq main() : Void {

    for var Int i = 0; i < 2; i++ {

    }

}
}