PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ForControlWarningCoCo.par
ForControlWarningCoCo {
seq main() : Void {

    var Int j = 0
    for var Int i = 0; 1 < 2; j++ {

    }

}
}